<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.location.LocationFragment">

    <TextView
        android:id="@+id/tv_title_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Current Location Data:" />

    <TextView
        android:id="@+id/tv_longitude_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_location"
        android:text="@string/text_longitude" />

    <TextView
        android:id="@+id/tv_latitude_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_longitude_location"
        android:text="@string/text_latitude" />

    <TextView
        android:id="@+id/tv_provider_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_latitude_location"
        android:text="@string/text_provider" />

    <Button
        android:id="@+id/btn_open_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_open_maps"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_provider_location" />

    <Button
        android:id="@+id/btn_get_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_get_current_location"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>