<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_home_profile"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_75sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_16sdp">
        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_name"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_64sdp"
            android:layout_marginTop="@dimen/_8sdp"/>

        <TextView
            android:id="@+id/tv_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_job"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_64sdp"
            android:layout_marginTop="@dimen/_32sdp"/>

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_indonesia"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_64sdp"
            android:layout_marginTop="@dimen/_48sdp"/>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>